# WISER

./: .gitignore  README.md  app.py  pyproject.toml
conf/: config.yaml
conf/augment/: awb_sbi.yaml  awb_sbi_no_arca.yaml  awb_sbi_no_awb.yaml  awb_sbi_only.yaml  awb_sbi_v2.yaml  basic.yaml  full.yaml  no_freqmask.yaml  no_sbi.yaml
conf/data/: celebdfpp.yaml  ffpp.yaml
conf/experiment/: E00_baseline.yaml  E01_rp_mphc_only.yaml  E02_awb_sbi_only.yaml  E03_cnd_only.yaml  E04_wiser_rf_full.yaml  E05_no_rp_mphc.yaml  E06_no_awb_sbi.yaml  E07_no_cnd.yaml  E08_no_calibration.yaml  E09_full.yaml
conf/loss/: bce_scl.yaml  cnd_only.yaml  focal_mphc.yaml  full.yaml  only_bce.yaml  rp_hc.yaml  rp_hc_no_cnd.yaml  rp_hc_no_rp.yaml  rp_mphc_only.yaml
conf/model/: baseline_scade_like.yaml  wiser_full.yaml  wiser_no_bissm.yaml  wiser_no_cdc.yaml  wiser_no_ssca.yaml  wiser_no_wavelet.yaml  wiser_rf_full.yaml  wiser_rf_no_cnd.yaml
conf/training/: debug.yaml  default.yaml  default_calibrated.yaml  long.yaml
outputs/E04_wiser/0/: calib.json  config_resolved.yaml  embeddings.npz  metrics.json  run_meta.json
outputs/E04_wiser/0/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/E04_wiser/0/ckpt/: best.pt  last.pt
scripts/: calibrate_only.py  compile_results.py  evaluate.py  make_visualizations.py  preprocess_celebdfpp.py  preprocess_ffpp.py  run_ablation.sh  run_robustness.py  sanity_check.py  train.py
wiser/: __init__.py
wiser/configs/: __init__.py  schemas.py
wiser/data/: arca.py  augmentation.py  awb_sbi.py  awb_sbi_v2.py  celebdfpp_dataset.py  face_detector.py  ffpp_dataset.py  freq_mask.py  preprocessing.py  real_mixstyle.py  sbi.py  splits.py
wiser/evaluation/: evaluator.py  metrics.py  robustness.py
wiser/inference/: __init__.py  calibrator.py  tta.py  video_pool.py
wiser/models/: bissm.py  cdc.py  classifier_head.py  disentangle.py  losses.py  ssca.py  stem.py  wavelet_stream.py  wiser.py
wiser/training/: callbacks.py  ema.py  optim.py  trainer.py  utils.py
wiser/utils/: __init__.py  io.py  logging.py  repro.py
