[project]
name = "wiser"
version = "0.1.0"
description = "WISER"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Nikolai Mozgovoi" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "torch>=2.4,<2.6",
  "torchvision>=0.19",
  "numpy>=1.26,<3",
  "pandas>=2.2",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "hydra-core>=1.3",
  "hydra-colorlog>=1.2",
  "omegaconf>=2.3",
  "tensorboard>=2.17",
  "albumentations>=1.4",
  "kornia>=0.7",
  "opencv-python-headless>=4.10",
  "pytorch-wavelets>=1.3",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "umap-learn>=0.5",
  "tqdm>=4.66",
  "rich>=13.7",
  "pillow>=10",
]

[project.optional-dependencies]
# NOTE: ``mamba-ssm`` and ``causal-conv1d`` MUST be installed manually with
# ``--no-build-isolation`` after ``uv sync``, because they compile CUDA C++
# kernels that need the *same* CUDA toolkit as the installed PyTorch wheels.
# Putting them in an extras group makes uv's resolver build them in an isolated
# venv that doesn't see the system toolkit, which fails on any host where
# nvcc != torch.version.cuda. Install path:
#
#     uv sync                               # base install (LinearAttention2D fallback)
#     export CUDA_HOME=/usr/local/cuda-12.4 # match torch's CUDA
#     uv pip install --no-build-isolation causal-conv1d mamba-ssm
#
# wiser/models/bissm.py auto-detects mamba-ssm at import; absence falls back to
# a LinearAttention2D mixer with the same BiSSM2D interface.
sbi = [
  "face-alignment>=1.4",
]
# MTCNN is optional. facenet-pytorch 2.6.0 pins torchvision<0.18, which conflicts
# with the torchvision>=0.19 we need for torch 2.4+. Older 2.5.x releases have
# a looser pin and may resolve cleanly; if not, install with ``--no-deps``.
# The Haar-Cascade fallback in wiser/data/face_detector.py keeps preprocessing
# working without it.
mtcnn = [
  "facenet-pytorch",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wiser"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL"]
ignore = ["PLR0913", "PLR0915", "PLR2004", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["wiser/utils", "wiser/configs"]